--- a/index.html
+++ b/index.html
@@ -14,44 +14,32 @@
 <body>
     <main id="container">
         <section id="img">
-            <img src="illustration.svg" alt="Imagem de ilustração">
+            <img src="illustration.svg" alt="Imagem ilustrativa de saúde">
         </section>
 
         <section id="calculator">
             <form id="form">
-                <h1 id="title">
-                    Calculadora - IMC
-                </h1>
+                <h1 id="title">Calculadora - IMC</h1>
 
                 <div class="input-box">
-                    <label for="weight">
-                        Peso em kg
-                    </label>
+                    <label for="weight">Peso em kg</label>
                     <div class="input-field">
                         <i class="fa-solid fa-weight-hanging"></i>
                         <input type="number" id="weight" name="weight" required>
-                        <span>
-                            Kg
-                        </span>
+                        <span>Kg</span>
                     </div>
                 </div>
 
                 <div class="input-box">
-                    <label for="height">
-                        Altura em metros
-                    </label>
+                    <label for="height">Altura em metros</label>
                     <div class="input-field">
                         <i class="fa-solid fa-ruler"></i>
                         <input type="number" step="0.01" id="height" name="height" required>
-                        <span>
-                            m
-                        </span>
+                        <span>m</span>
                     </div>
                 </div>
                 
-                <button id="calculate">
-                    Calcular
-                </button>
+                <button id="calculate">Calcular</button>
             </form>    
             
             <div id="infos" class="hidden">
@@ -75,17 +63,5 @@
         </section>
     </main>
     <script src="script.js"></script>
-    <script>
-        if ('serviceWorker' in navigator) {
-            window.addEventListener('load', function() {
-                navigator.serviceWorker.register('service-worker.js').then(function(registration) {
-                    console.log('ServiceWorker registration successful with scope: ', registration.scope);
-                }, function(error) {
-                    console.log('ServiceWorker registration failed: ', error);
-                });
-            });
-        }
-    </script>
 </body>
 </html>
-
