--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <select id="voiceSelect"></select>
                 </div>
                 
-                <button id="calculate">
+                <button id="calculate" type="submit">
                     Calcular
                 </button>
             </form>    
